Lab5/style.css
/* Reset some default browser styles */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: Arial, sans-serif;
}

/* Page background */
body {
    background: #ccc;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
}

/* Header */
header {
    margin: 30px 0;
    color: rgb(0, 0, 0);
    text-align: center;
}

/* Main container */
.container {
    background: white;
    padding: 25px;
    border-radius: 12px;
    width: 350px;
    box-shadow: 0 8px 20px rgba(0,0,0,0.2);
}

/* Section spacing */
.container div {
    margin-bottom: 15px;
}

/* Labels */
label {
    display: block;
    margin-bottom: 5px;
    font-weight: bold;
}

/* Inputs and dropdown */
input, select {
    width: 100%;
    padding: 8px;
    border-radius: 6px;
    border: 1px solid #ccc;
    font-size: 14px;
}

/* Slider styling */
input[type="range"] {
    width: 100%;
    cursor: pointer;
}

/* Button */
button {
    width: 100%;
    padding: 10px;
    background-color: #4facfe;
    color: white;
    border: none;
    border-radius: 8px;
    font-size: 16px;
    cursor: pointer;
    transition: 0.3s;
}

/* Button hover */
button:hover {
    background-color: #007bff;
}

/* Currency info box */
.currency-info {
    background-color: #f0f8ff;
    padding: 10px;
    border-radius: 8px;
    font-size: 14px;
}

/* Result section */
.result-section input {
    font-weight: bold;
    color: #333;
}

